# HashSherlock

./: Cargo.toml  LICENSE  README.md
src/: cuda.rs  main.rs  opencl.rs  ui.rs
src/kernel/: sha256.cu  sha256.cuh  sha256.ptx
src/visualizations/: table.rs
