[package]
name = "hash_sherlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
egui_extras = "0.20.0"
eframe = "0.20.1"
tracing-subscriber = "0.3"
num_cpus = "1.15.0"
chrono = "0.4.23"
rand = "0.8.5"
ring = "0.16.20"
hex = "0.4.3"
num-format = "0.4.4"
sysinfo = "0.27.7"