[package]
name = "hash_sherlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = "0.21.3"
tracing-subscriber = "0.3"
num_cpus = "1.15.0"
chrono = "0.4.23"
rand = { version = "0.8.5", features = ['small_rng']}
ring = "0.16.20"
hex = "0.4.3"
num-format = "0.4.4"
sysinfo = "0.28.4"
ed25519-dalek = "1.0.1"
base64 = "0.21.0"
clipboard = "0.5.0"
cust = "0.3.2"
nanorand = "0.7.0"
rustc-serialize = "0.3.24"